Further layout pg2

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <h2><span>Space</span> <span>Ventures</span></h2>
             </div>
             <div class="purple">Ground control to major tom</div>  
-            <div class="yellow">And I'm floating...</div>
+            <blockquote class="quote">And I'm floating...</div>
         
         </div>
 
         <div class="grey">  
-            <div class="red">dolt citat i mobilläge</div>
-            <div class="blue">And I'm sitting in a tin can</div>
+            <div class="gradientquote">dolt citat i mobilläge</div>
+            <div class="blue clearfix">And I'm sitting in a tin can Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam soluta officia nostrum cum harum illum pariatur quidem temporibus <img src="../images/major_tom.jpg" alt="Major Tom" class="majortom"> aspernatur sint necessitatibus minima deleniti nemo error doloremque, unde iste, ipsum facilis?</div>
 
         </div>
 
