Added footer +styling

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Carolin Nielsen">
-    <meta name="description" content="This page contains..............">
-    <meta name="keywords" content="..........................">
+    <meta name="description" content="This page contains info about Major Tom and Space Ventures.">
+    <meta name="keywords" content="Space, Major Tom, Moon, ambition">
     <title>To The Moon</title>
     <link rel="stylesheet" href="../styling/normalize.css" type="text/css" />
     <link rel="stylesheet" href="../styling/style.css" type="text/css"/>
@@ -97,7 +97,10 @@
             </div>
 
 
-        
+        <footer>
+            I don’t know where I’m going from here, but I promise it won’t be boring. You should accept cookies.
+            <button class="accept">ACCEPT</button>
+        </footer>
     
         </section>
 
