--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
                     <h2><span>Space</span> <span>Ventures</span></h2>
                 </div>
 
-                <div class="purple">Ground Control to Major Tom. Ground Control to Major Tom. Take your protein pills and put your helmet on. Ground Control to Major Tom (ten, nine, eight, seven, six). Commencing countdown, engines on (five, four, three). Check ignition and may God's love be with you (two, one, liftoff). This is Ground Control to Major Tom.
-                You've really made the grade. And the papers want to know whose shirts you wear. Now it's time to leave the capsule if you dare. This is Major Tom to Ground Control. I'm stepping through the door.
-                
-                </div>  
 
+                <div class="purple"> <span class="tomheading">Ground Control to Major Tom</span><br>Ground Control to Major Tom. Take your protein pills and put your helmet on. Ground Control to Major Tom (ten, nine, eight, seven, six). Commencing countdown, engines on (five, four, three). Check ignition and may God's love be with you (two, one, liftoff). This is Ground Control to Major Tom.
+                You've really made the grade. And the papers want to know whose shirts you wear. Now it's time to leave the capsule if you dare. This is Major Tom to Ground Control. I'm stepping through the door. 
+                </div>
                 <blockquote class="quote">And I'm floating in a most peculiar way. And the stars look very different today. For here.
                 </blockquote>
             
