Cleanup + added screenshots

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
 <body>
+
     <div class="bothpages">
 
         <input type="checkbox">
@@ -32,12 +33,15 @@
                 </button>
 
                 <nav>
+
                     <ul>
                         <li>OUR STORY</li>
                         <li>SPACE VENTURES</li>
                         <li>ABOUT MAJOR TOM</li>
                     </ul>
+
                 </nav>
+
             </div>
 
 <!--***********************************************************************-->
@@ -96,11 +100,13 @@
                 Planet Earth is blue. <br>
                 And there's nothing I can do. <br>
 
-                <a class=tomlink href="url">Read more about Major Tom </a> 
+                    <a class=tomlink href="url">Read more about Major Tom </a> 
 
-                <span class="pil2"> → </span></div>
+                    <span class="pil2"> → </span>
+
+                </div>
                 
-                </section>
+            </section>
 
 
             <footer>
