--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="This page contains info about Major Tom and Space Ventures.">
     <meta name="keywords" content="Space, Major Tom, Moon, ambition">
     <title>To The Moon</title>
-    <link rel="stylesheet" href="../styling/style.css" type="text/css">
+    <link rel="stylesheet" href="./styling/style.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
